# Reqon_backend

./: .env  Cargo.toml  README.md
.sqlx/: query-07aca6092daa0cd4f6c89aa5eb0fdcc1682a77e5329c2aac6be145980f151ae8.json  query-705a803123a7c50137d6dd45f22d624fed21e94fcf0c672055a5d928502a7755.json  query-e20d735087b68e4cf0907207647f364e6002b6fc81e5767384c0b0408e807db5.json  query-e5a63d6de885d1831f5a13aa91847f71cac609468ad386d75c1592b3f6cc6510.json
src/: main.rs
src/config/: .env
src/db/: insert_users.rs  mod.rs  pool.rs
src/db/migrations/: 20251121222307_departments.sql  20251121222330_roles.sql  20251121222351_users.sql  20251121222436_notifications.sql  20251121223454_main.sql  20251121224652_insert.sql
src/handlers/: auth_handler.rs  department.rs  mod.rs  role.rs  task.rs  user.rs
src/models/: department.rs  mod.rs  role.rs  task.rs  user.rs
src/models/forms/: mod.rs
src/routes/: auth.rs  dashboard.rs  mod.rs  tasks.rs  users.rs
src/services/: auth_service.rs  mod.rs  task_service.rs  user_service.rs
src/utils/: jwt.rs  mod.rs  password.rs
