[package]
name = "Reqon-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.6"
tokio = { version = "1", features = ["full"] }

sqlx = { version = "0.7", features = ["chrono", "macros", "postgres", "runtime-tokio-native-tls", "time", "uuid"] }
uuid = { version = "1", features = ["serde", "v4"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

argon2 = "0.5"
jsonwebtoken = "9"
tower-http = { version = "0.4", features = ["trace"] }
dotenvy = "0.15"
chrono = { version = "0.4.42", features = ["serde"] }
jwt = "0.16.0"
rand = "0.9"
password-hash = "0.5.0"


